Streaming situation: SSE only from mailserver to client of connection details Manage state on mailserver of whether a connection isLoggedIn or not
