# Sources/EmailServerAPI/Stream+Client.swift
@@ -7,57 +7,56 @@
 
 import Foundation
 import OpenAPIRuntime
+import Logging
 
 // MARK: Client Streaming
 public actor SMTPClientStream {
-    /// Stream response from server
-    public typealias Inbound = Components.Schemas.SMTPServerStreamInput
+    /// Stream responses from server about status of a SMTP connection
+    public typealias Inbound = Components.Schemas.SMTPServerStream
     public typealias InboundStream = AsyncThrowingMapSequence<JSONLinesDeserializationSequence<HTTPBody>, Inbound>
     
-    /// Stream request to server
-    public typealias Outbound  = Components.Schemas.SMTPServerStreamInput
-    public typealias OutboundStream = AsyncStream<Outbound>
-    
-    private let outbound: OutboundStream
-    private let continuation: OutboundStream.Continuation
-    
     public let inbound: InboundStream
+    public var logger: Logger
     
     public init(
-        smtpHost: String, smtpHostPort: Int, using client: Client
+        smtpHost: String, smtpHostPort: Int, using client: Client, logger: Logger = .init(label: "SMTP Client Stream")
     ) async throws {
         // make outbound stream to server
-        let (outbound, continuation) = OutboundStream.makeStream()
-        let inbound = try await Self.make(smtpHost: smtpHost, smtpHostPort: smtpHostPort, outbound: outbound, client: client)
-        
-        self.outbound = outbound
-        self.continuation = continuation
-        
+        let inbound = try await Self.make(smtpHost: smtpHost, smtpHostPort: smtpHostPort, client: client)
         self.inbound = inbound
+        self.logger = logger
     }
     
     static private func make(
         smtpHost: String, smtpHostPort: Int,
-        outbound: OutboundStream,
         client: Client
     ) async throws -> InboundStream {
         // fill out http req params and assign outbound stream
         let request: Operations.SmtpStream.Input = .init(
-            query: .init(smtpHost: smtpHost, smtpHostPort: smtpHostPort),
-            body: .applicationJsonl(
-                .init(outbound.asEncodedJSONLines(), length: .unknown, iterationBehavior: .single)
-            ))
+            query: .init(smtpHost: smtpHost, smtpHostPort: smtpHostPort))
         
         // send request, return inbound stream
         let res = try await client.smtpStream(request)
         let inbound = try res.ok.body.applicationJsonl.asDecodedJSONLines(of: Inbound.self)
         return inbound
     }
+    
+    static func taskGroup(inbound: InboundStream) async throws {
+        try await withThrowingTaskGroup(of: Void.self) { group in
+            group.addTask {
+                for try await message in inbound {
+                    
+                }
+            }
+            
+            try await group.waitForAll()
+        }
+    }
 }
 
 
 public actor ClientStream {
-    public typealias StreamOutput = AsyncStream<EmailServerAPI.Components.Schemas.SMTPServerStreamInput>
+    public typealias StreamOutput = AsyncStream<EmailServerAPI.Components.Schemas.SMTPServerStream>
     
     let output: StreamOutput
     let continuation: StreamOutput.Continuation
@@ -68,37 +67,16 @@ public actor ClientStream {
         try await Self.createTaskGroup(output: self.output, continuation: continuation)
     }
     
-    public func handle(_ incoming: EmailServerAPI.Components.Schemas.SMTPServerStreamInput) async {
-        print("handling message: \(incoming)")
-    }
-    
-    public func send(_ outgoing: EmailServerAPI.Components.Schemas.SMTPServerStreamInput) {
-        print("sending message: \(outgoing)")
-    }
-    
     static func createTaskGroup(output: StreamOutput, continuation: StreamOutput.Continuation) async throws {
         try await withThrowingTaskGroup(of: Void.self) { group in
             group.addTask {
                 for try await message in output {
-                    switch message.input {
-                    case .SimpleSMTPEmail(let email):
-                        print("Received \(email)")
-                    case .SMTPLogin(let login):
-                        print("Received \(login)")
-                    case .SMTPLogout(let logout):
-                        print("Received \(logout)")
-                    case .StreamKeepAlive(let keepAlive):
-                        print("Recieved \(keepAlive)")
+                    switch message.serverMessage {
+                    case .SMTPServerStreamConnectionClose(let connectionClose):
+                        print(connectionClose)
+                    case .SMTPServerStreamConnectionIDState(let idState):
+                        print(idState)
                     }
-                    continuation.yield(message)
-                }
-            }
-            
-            group.addTask {
-                for _ in 0...100 {
-                    try await Task.sleep(for: .seconds(2))
-                    let keepAlive: Components.Schemas.SMTPServerStreamInput = .init(input: .StreamKeepAlive(.init(keepAlive: true)))
-                    continuation.yield(keepAlive)
                 }
             }
             
